--- a/roles/server_hardening/templates/fw-lists-update.sh.j2
+++ b/roles/server_hardening/templates/fw-lists-update.sh.j2
@@ -76,6 +76,9 @@ getlist() {
 	local URL=""
 	local URL6=""
 	case "$1" in
+		tor)
+			URL=https://check.torproject.org/torbulkexitlist
+			;;
 		fireholL1)
 			URL=https://raw.githubusercontent.com/firehol/blocklist-ipsets/master/firehol_level1.netset
 			;;
